# embedding-dedupe-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/embedding_dedupe/: __init__.py  dedupe.py
tests/: test_dedupe.py
