[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "embedding-dedupe"
version = "0.1.0"
description = "Deduplicate near-identical embedding records by cosine similarity. Pure Python, zero runtime deps. Python port of @mukundakatta/embedding-dedupe."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "rag",
  "vector",
  "embedding",
  "dedupe",
  "deduplication",
  "cosine",
  "similarity",
  "llm",
  "ai",
  "agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
numpy = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/embedding-dedupe-py"
Issues = "https://github.com/MukundaKatta/embedding-dedupe-py/issues"
Source = "https://github.com/MukundaKatta/embedding-dedupe-py"
"JS sibling" = "https://github.com/MukundaKatta/embedding-dedupe"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_dedupe"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
